# passgen

./: .editorconfig  .gitignore  Makefile  Makefile.in  README.md  configure  configure.ac  master.sh
.src/: 1  2
doc/: documentation.md
locale/: locale.tar
locale/en_US/: passgen.po
locale/en_US/LC_MESSAGES/: passgen.mo  passgen.po
locale/ru/: passgen.po
locale/ru/LC_MESSAGES/: passgen.mo  passgen.po
locale/ru_RU/: passgen.po
locale/ru_RU/LC_MESSAGES/: passgen.mo  passgen.po
man/: passgen.1
man/en_US/: passgen.1
man/ru_RU/: passgen.1
resource/: config.h.in  translate.sh.in
resource/in/: Makefile.in  config.h.in  passgen.1.in  translate.sh.in
resource/locale/: locale.tar
resource/make/: Makefile.in  help
resource/man/en_US/: passgen.1.in
resource/man/ru_RU/: passgen.1.in
resource/readme/: 1  2  3
source/: aes.c  arguments.c  main.c  passgen.c  print.c  valid.c
source/h/: arguments.h  config.h  config.h.in  main.h  passgen.h  print.h  stamp-h1  valid.h
